--- a/gsmdashboard/templates/pages/subjectvideos.html
+++ b/gsmdashboard/templates/pages/subjectvideos.html
@@ -1,5 +1,95 @@
 {% include 'header.html' %}
 
+<section>
+    <div class="d-flex" id="wrapper">
+        <!-- Sidebar -->
+        <div class="border-end bg-white" id="sidebar-wrapper">
+            <div class="sidebar-heading border-bottom bg-light">Start Learning</div>
+            <div class="list-group list-group-flush">
+                {% for video in videos %}
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="{{ video.video_url }}">{{ video.title }}</a>
+                {% endfor %}
+            </div>
+        </div>
+        <!-- End Sidebar -->
+        
+        <!-- Page content wrapper -->
+        <div id="page-content-wrapper">
+            <!-- Top navigation with toggle button -->
+            <div class="container-fluid">
+                <button class="btn btn-primary" id="sidebarToggle">Click to hide Menu</button>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                
+                <!-- Source learning video  -->
+                <div class="ratio ratio-16x9 ms-auto" style="--bs-aspect-ratio: 56%;">
+                    <video id="learning-video" controls>
+                        <iframe src="{{ video.video_url }}" title="YouTube video" allowfullscreen></iframe>
+                    </video>
+                </div>
+                
+                
+                <!-- End of Source video for learning -->
+            </div>
+            <!-- End Top navigation with toggle button -->
+        </div>
+        <!-- End Page content wrapper -->
+    </div>
+</section>
+
+<script>
+    const videoLinks = document.querySelectorAll('.list-group-item');
+    const videoPlayer = document.querySelector('#learning-video');
+    
+    videoLinks.forEach(link => {
+        link.addEventListener('click', (e) => {
+            e.preventDefault();
+            console.log("videoPlayer->", e.target.href);
+            videoPlayer.src = e.target.href;
+        });
+    });
+</script>
+
+<!-- Bootstrap core JS-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Core theme JS-->
+<script src="/static/js/scripts.js"></script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+{% comment %} {% include 'header.html' %}
+
 
 <section>
 <div class="d-flex" id="wrapper">
@@ -8,7 +98,7 @@
         <div class="sidebar-heading border-bottom bg-light">Start Lerning</div>
         <div class="list-group list-group-flush">
             {%for i in videos%}
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#">{{i.title}}</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">{{i.title}}</a>
             {% endfor%}
         </div>
     </div>
@@ -42,4 +132,4 @@
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Core theme JS-->
-<script src="/static/js/scripts.js"></script>
+<script src="/static/js/scripts.js"></script> {% endcomment %}
