--- a/gsmdashboard/templates/index.html
+++ b/gsmdashboard/templates/index.html
@@ -1,31 +1,36 @@
-{% include 'pages/header.html' %}
-
-<div class="container">
-  <div class="row">
-    <div class="col-md-6">
-      <video controls poster="path_to_poster_image.jpg" class="w-100"  controls width="1000" height="650"> 
-        <source src="path_to_video.mp4" type="video/mp4">
-        <source src="path_to_video.webm" type="video/webm">
-        <p>Your browser does not support HTML5 video. Please upgrade your browser to see the video.</p>
-      </video>
-    </div>
-    <div class="col-md-6 d-flex align-items-center justify-content-center">
-      <div class="text-center">
-        <h2>Watch our video</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <a href="path_to_video.mp4" class="btn btn-primary">Play now</a>
+{% extends 'pages/basic.html' %}
+ <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Website</title>
+    <link rel="stylesheet" href="/static/css/main.css" >
+    <link rel="stylesheet" href="/static/css/universeio.css" >
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  </head>
+{% block content%}
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <video controls poster="path_to_poster_image.jpg" class="w-100"  controls width="1000" height="650"> 
+          <source src="path_to_video.mp4" type="video/mp4">
+          <source src="path_to_video.webm" type="video/webm">
+          <p>Your browser does not support HTML5 video. Please upgrade your browser to see the video.</p>
+        </video>
+      </div>
+      <div class="col-md-6 d-flex align-items-center justify-content-center">
+        <div class="text-center">
+          <h2>Watch our video</h2>
+          <p>This is the demo video for our site.</p>
+          <a href="path_to_video.mp4" class="btn btn-primary">Play now</a>
+        </div>
       </div>
     </div>
   </div>
-</div>
+</section>
+{% endblock%}
 
-    
-      {% include 'pages/footer.html' %}
-   
-
-    {% comment %} <script src="script.js"></script> {% endcomment %}
-  </body>
-</html>
 
 
 {% comment %} 
