--- a/gsmdashboard/templates/pages/basic.html
+++ b/gsmdashboard/templates/pages/basic.html
@@ -1,52 +1,177 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
-    <link rel="stylesheet" href="/static/css/main.css" >
-    <link rel="stylesheet" href="/static/css/universeio.css" >
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  </head>
-  <body>
-  <section>
-    <header>
-        {% comment %} bg-transparent color {% endcomment %}
-        <div>
-          <nav class="navbar navbar-expand-lg navbar-light ">
-            <a class="navbar-brand" href="http://127.0.0.1:8000/">Dashboard</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse " id="navbarNav">
-                <ul class="navbar-nav mx-auto">
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.path == '/' %} active {%endif %}" href="http://127.0.0.1:8000/" style="margin: 0 50px;">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.path == '/eclass_list/' %} active {%endif %}" href="{% url 'eclass_list' %}" style="margin: 0 50px;">Classes</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.path == '/contect/' %} active {%endif %}" href="{% url 'contect' %}" style="margin: 0 50px;">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.path == '/aboutus/' %} active {%endif %}" href="{% url 'aboutus' %}" style="margin: 0 50px;">About</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-        </div>
-    </header>
-</section>
-  {% block content %} {% endblock %}
-  
-  <footer class="bg-light text-center text-lg-start fixed-bottom">
-    <div class="text-center p-3">
-    &copy; 2023 Dashboard. All rights reserved.
-    </div>
-  </footer>
+    <link rel="stylesheet" href="/static/css/main.css">
+    <link rel="stylesheet" href="/static/css/universeio.css">
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <link rel='script' href='/static/js/bootstrap.bundle.min.js'>
+</head>
 
-    {% comment %} <script src="script.js"></script> {% endcomment %}
-  </body>
+<body>
+    <section>
+        <header>
+            {% comment %} bg-transparent color {% endcomment %}
+            <div>
+                <nav class="navbar navbar-expand-lg navbar-light ">
+                    <a class="navbar-brand" href="http://127.0.0.1:8000/">Dashboard</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse " id="navbarNav">
+                        <ul class="navbar-nav mx-auto">
+                            <li class="nav-item nav-btn">
+                                <a class="nav-link {% if request.path == '/' %} active {%endif %}"
+                                    href="http://127.0.0.1:8000/" style="margin: 0 50px;">Home</a>
+                            </li>
+                            <li class="nav-item nav-btn">
+                                <a class="nav-link {% if request.path == '/Classes/' %} active {%endif %}"
+                                    href="{% url 'eclass_list' %}" style="margin: 0 50px;">Classes</a>
+                            </li>
+                            <li class="nav-item nav-btn">
+                                <a class="nav-link {% if request.path == '/contect/' %} active {%endif %}"
+                                    href="{% url 'contect' %}" style="margin: 0 50px;">Contact</a>
+                            </li>
+                            <li class="nav-item nav-btn">
+                                <a class="nav-link {% if request.path == '/aboutus/' %} active {%endif %}"
+                                    href="{% url 'aboutus' %}" style="margin: 0 50px;">About</a>
+                            </li>
+                            <li class="nav-item nav-btn">
+                                <!-- Button trigger modal -->
+                                <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                    data-bs-target="#signupeModal">
+                                    Register
+                                </button>
+                            <li class="nav-item nav-btn">
+                                <!-- Button trigger modal -->
+                                <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                    data-bs-target="#signinModal">
+                                    Login
+                                </button>
+
+                            </li>
+                        </ul>
+                    </div>
+                    
+                </nav>
+            </div>
+        </header>
+    </section>
+    <!-- Modal (bUTTON ADDED ABOVE)-->
+    <div>
+        <div class="modal fade" id="signupeModal" tabindex="-1" aria-labelledby="signupeModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="signupeModalLabel">Modal title</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form class="form">
+                        <p class="title">Register </p>
+                        <p class="message">Signup now and get full access to our app. </p>
+                            <div class="flex">
+                            <label>
+                                <input required="" placeholder="" type="text" class="input">
+                                <span>Firstname</span>
+                            </label>
+                    
+                            <label>
+                                <input required="" placeholder="" type="text" class="input">
+                                <span>Lastname</span>
+                            </label>
+                        </div>  
+                                
+                        <label>
+                            <input required="" placeholder="" type="email" class="input">
+                            <span>Email</span>
+                        </label> 
+                            
+                        <label>
+                            <input required="" placeholder="" type="password" class="input">
+                            <span>Password</span>
+                        </label>
+                        <label>
+                            <input required="" placeholder="" type="password" class="input">
+                            <span>Confirm password</span>
+                        </label>
+                        <button class="submit">Submit</button>
+                        <p class="signin">Already have an acount ? <a href="#">Signin</a> </p>
+                    </form>
+                </div>
+               
+            </div>
+        </div>
+    </div>
+</div>
+    <!-- Modal signin (bUTTON ADDED ABOVE)-->
+    <div>
+        <div class="modal fade" id="signinModal" tabindex="-1" aria-labelledby="signinModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="signinModalLabel">Modal title</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form class="form">
+                        <p class="title">Login </p>
+                        <p class="message">Signin now and get full access to our app. </p>
+                            <div class="flex">
+                            {% comment %} <label>
+                                <input required="" placeholder="" type="text" class="input">
+                                <span>Firstname</span>
+                            </label>
+                    
+                            <label>
+                                <input required="" placeholder="" type="text" class="input">
+                                <span>Lastname</span>
+                            </label> {% endcomment %}
+                        </div>  
+                                
+                        <label>
+                            <input required="" placeholder="" type="email" class="input">
+                            <span>Email</span>
+                        </label> 
+                            
+                        <label>
+                            <input required="" placeholder="" type="password" class="input">
+                            <span>Password</span>
+                        </label>
+                        <label>
+                            <input required="" placeholder="" type="password" class="input">
+                            <span>Confirm password</span>
+                        </label>
+                        <button class="submit">Submit</button>
+                        <p class="signin">Already have an acount ? <a href="#">Signin</a> </p>
+                    </form>
+                </div>
+               
+            </div>
+        </div>
+    </div>
+</div>
+        <!--END  Modal -->
+
+    {% block content %} {% endblock %}
+
+
+
+
+
+    <footer class="bg-light text-center text-lg-start fixed-bottom">
+        <div class="text-center p-3">
+            &copy; 2023 Dashboard. All rights reserved.
+        </div>
+    </footer>
+
+
+    <script src="/static/js/script.js"></script>
+    <script src="/static/js/bootstrap.bundle.min.js"></script>
+</body>
+
 </html>
