--- a/gsmdashboard/templates/pages/subjectvideos.html
+++ b/gsmdashboard/templates/pages/subjectvideos.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
-    <link rel="stylesheet" href="/static/css/main.css" >
-    <link rel="stylesheet" href="/static/css/universeio.css" >
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  </head>
+    <link rel="stylesheet" href="/static/css/main.css">
+    <link rel="stylesheet" href="/static/css/universeio.css">
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <link rel='script' href='/static/css/bootstrap.bundle.min.js'>
+ </head>
   <body>
   
 </section>
@@ -34,12 +34,12 @@
             <!-- Top navigation with toggle button -->
             <div>
                 <div class="container-fluid">
-                    <button class="btn " id="sidebarToggle"><div class="container-menu" onclick="myFunction(this)">
+                    <button class="btn subvidoes-nav-btn" id="sidebarToggle"><div class="container-menu" onclick="myFunction(this)">
                         <div class="bar1"></div>
                         <div class="bar2"></div>
                         <div class="bar3"></div>
                         </button>
-                        <button><a href='{% url 'eclass_list' %}' style="text-decoration: none;">Classes</a></button>
+                        <button class='subvidoes-nav-btn'><a href='{% url 'eclass_list' %}' style="text-decoration: none;">Classes</a></button>
                         {% comment %} <button><a href='#' style="text-decoration: none;">Subjects</a></button> {% endcomment %}
 
                     </div>
