--- a/gsmdashboard/templates/pages/basic.html
+++ b/gsmdashboard/templates/pages/basic.html
@@ -71,38 +71,47 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <form class="form">
-                        <p class="title">Register </p>
-                        <p class="message">Signup now and get full access to our app. </p>
-                            <div class="flex">
-                            <label>
-                                <input required="" placeholder="" type="text" class="input">
+                    <form class="form" action="/signup" method="post">
+                        {% csrf_token %}
+                        <p class="title">Register</p>
+                        <p class="message">Signup now and get full access to our app.</p>
+                        <div class="flex">
+                            <label for="username">
+                                <input required="" placeholder="" type="text" class="input" id="username" name="username">
+                                <span>Username</span>
+                            </label>
+                    
+                            <label for="firstname">
+                                <input required="" placeholder="" type="text" class="input" id="firstname" name="firstname">
                                 <span>Firstname</span>
                             </label>
                     
-                            <label>
-                                <input required="" placeholder="" type="text" class="input">
+                            <label for="lastname">
+                                <input required="" placeholder="" type="text" class="input" id="lastname" name="lastname">
                                 <span>Lastname</span>
                             </label>
                         </div>  
-                                
-                        <label>
-                            <input required="" placeholder="" type="email" class="input">
+                    
+                        <label for="email">
+                            <input required="" placeholder="" type="email" class="input" id="email" name="email">
                             <span>Email</span>
                         </label> 
-                            
-                        <label>
-                            <input required="" placeholder="" type="password" class="input">
+                        
+                        <label for="password">
+                            <input required="" placeholder="" type="password" class="input" id="password" name="password">
                             <span>Password</span>
                         </label>
-                        <label>
-                            <input required="" placeholder="" type="password" class="input">
+                        
+                        <label for="confirmpassword">
+                            <input required="" placeholder="" type="password" class="input" id="confirmpassword" name="confirmpassword">
                             <span>Confirm password</span>
                         </label>
-                        <button class="submit">Submit</button>
-                        <p class="signin">Already have an acount ? <a href="#">Signin</a> </p>
+                        
+                        <button class="submit" type="submit">Submit</button>
+                        <p class="signin">Already have an account? <a href="#">Sign in</a></p>
                     </form>
                 </div>
+                
                
             </div>
         </div>
@@ -142,10 +151,7 @@
                             <input required="" placeholder="" type="password" class="input">
                             <span>Password</span>
                         </label>
-                        <label>
-                            <input required="" placeholder="" type="password" class="input">
-                            <span>Confirm password</span>
-                        </label>
+                        
                         <button class="submit">Submit</button>
                         <p class="signin">Already have an acount ? <a href="#">Signin</a> </p>
                     </form>
